--- a/src/templates/FlexTemplate.css
+++ b/src/templates/FlexTemplate.css
@@ -7,3 +7,10 @@
     justify-content:center;
     padding-left:5px;
 }
+@media ( max-width: 700px) {
+   
+    .mainDiv  >div{ flex-basis: 33.33%; }
+  }
+  @media ( max-width: 400px) {
+     .mainDiv > div{ flex-basis: calc(25% - 10px); }
+  }
