--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,11 +5,19 @@
     justify-content:center;
     align-items:center;
     display:flex;
-    flex-direction:row;
+    flex-direction:column;
+
 }
 .navBar--a{
-    flex:1;
+    flex:2;
     margin-left:10px;
+  text-align: center;
+}
+.navbar--search{
+    flex:1;
+    display:flex;
+    flex-direction: row;
+    flex-wrap:nowrap
 }
 .card--div{
  
@@ -23,4 +31,12 @@
         flex-grow: 1;
 	flex-shrink: 0;
 	
+}
+@media only screen and (min-width: 800px) {
+.navBar--nav{
+    flex-direction: row;
+}
+.navBar--a{
+    text-align: left;
+}
 }
