--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -13,7 +13,7 @@
     flex:2;
     margin-left:10px;
   text-align: center;
-  flex-direction:row;
+  flex-direction:column;
   justify-content:space-around;
 align-items:center;
 }
@@ -51,5 +51,6 @@ a:hover{
 }
 .navBar--a{
     text-align: left;
+    flex-direction:row
 }
 }
